Fixed mobile view font size - was too large

--- a/css/bundle.css
+++ b/css/bundle.css
@@ -920,7 +920,7 @@ div.content.notes article {
   height: 100vh;
   padding-left: 1rem;
   padding-right: 1rem;
-  font-size: 1.875rem;
+  font-size: 1.25rem;
   line-height: 1.625;
 }
 
